# env-viewer

./: .editorconfig  .gitignore  README.md  Taskfile.yml  pyproject.toml
env_viewer/: app.py
env_viewer/templates/: index.html
tests/: test_app.py
