[tool.poetry]
name = "env-viewer"
version = "1.0.0"
description = "A web app to visualize environment variables"
authors = ["Samuel Stidham <dqfan2012@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"

[tool.poetry.group.dev.dependencies]
flask = "^3.0.3"
python-dotenv = "^1.0.1"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
